# Tengine_Demo

./: All_build.sh  CMakeLists.txt  README.md  build.sh
Classify/: CMakeLists.txt  android_build_armv8.sh  classification.cpp  linux_build.sh
LFFD_face/: CMakeLists.txt  LFFD_facedetect.cpp  linux_build.sh
TE-BU-E000-openx86/: README.txt
TE-BU-E000-openx86/tools/x86/: README.txt  checksum.txt
Tengine_lib/TE-BU-E000-hisiv500/pre-built/: toolchain.readme
Tengine_lib/TE-BU-E000-hisiv500/pre-built/linux_arm32/lib/: checksum.txt
YuFaceDetection/: CMakeLists.txt  linux_build.sh  yu_facedetect.cpp
YuFaceDetection/data/: YuFaceDetect-v2.tmfile
classification/: CMakeLists.txt  classification.cpp  get_version.cpp  linux_build.sh
faster_rcnn/: CMakeLists.txt  faster_rcnn.cpp  linux_build.sh
faster_rcnn/data/: VGG16_faster_rcnn.prototxt
lighten_cnn/: CMakeLists.txt  lighten_cnn.cpp  linux_build.sh
mobileface/: CMakeLists.txt  classification.cpp  linux_build.sh  mobileface.tmfile  mobilefacenet.cpp  readme.txt
mobileface/data/: model-symbol.tmfile
mssd_tflite/: CMakeLists.txt  detect_tflite_mssd.cpp  linux_build.sh
mtcnn/: CMakeLists.txt  linux_build.sh  mtcnn.cpp  mtcnn.hpp  mtcnn_utils.cpp  test_mtcnn.cpp
mtcnn/data/models/: det1.tmfile  det2.tmfile  det3.tmfile
ssd/: CMakeLists.txt  ssd.cpp
ssd/data/: VGG_VOC0712_SSD_300.prototxt
tflite-int8-mobilenet/: CMakeLists.txt  classification.cpp  linux_build.sh  mobilenet_tflite.cpp
yolov2/: CMakeLists.txt  linux_build.sh  yolov2.cpp
yolov2/data/: yolo-voc.prototxt
